apps/orion/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: orion
  labels:
    reloader.stakater.com/enabled: "true"
