apps/orion/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: orion
  namespace: apps
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Public
    gethomepage.dev/name: Orion
    gethomepage.dev/description: Public Orion app
    gethomepage.dev/pod-selector: app=orion
spec:
  ingressClassName: traefik-public
  tls:
    - hosts: [orion.harville.dev]
      secretName: harville-wildcard-shared-tls
  rules:
    - host: orion.harville.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: orion
                port:
                  name: gui
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: orion
                port:
                  name: api
